--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "moment": "^2.22.1",
     "mysql2": "^1.5.3",
+    "node-cron": "^1.2.1",
     "path": "^0.12.7",
     "restify": "^6.3.4",
     "sequelize": "^4.37.6",
-    "sequelize-cli": "^4.0.0" 
+    "sequelize-cli": "^4.0.0"
   }
 }
