Tweaking notes, renaming, turn db logging off

--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "blackswan_development",
+    "database": "bs_development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "blackswan_test",
+    "database": "bs_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "blackswan_production",
+    "database": "bs_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   }
 }
